# claudeCodeR

./: .Rbuildignore  .gitignore  CLAUDE.md  DESCRIPTION  INSTALL.md  ISSUES.archive.md  LICENSE  NAMESPACE  NON_BLOCKING.md  QUICK_START.md  README.md  TESTING.md  check_server_logs.sh  install_package.R  scatterplot.R  tail_logs.sh  test_permissions_blocking.R  test_print.R  test_server_logs.R
.claude/: SDK_PATCH.md  STATUS.md  cleanup.sh  tasks
.claude/agents/: acp-specialist.md
.claude/tasks/: README.md
.claude/tasks/acp-websocket-integration/: COMPLETED.md  spec.md
.claude/tasks/sdk-feature-parity/: spec.md
.claude/tasks/ui-improvements/: spec.md
R/: acp_addin.R  acp_addin_blocking.R  acp_agent_config.R  acp_dependencies.R  acp_handlers.R  acp_methods.R  acp_proxy_manager.R  acp_shiny_ui.R  acp_websocket_client.R  addin.R  addin_nonblocking.R  config.R  rstudio_integration.R  sdk_client.R  shiny_ui.R
examples/: basic_usage.R
inst/python/: pyproject.toml  requirements.txt  sdk_server.py
inst/rstudio/: addins.dcf
inst/scripts/: start-acp-proxy.sh
python/: aws_config.py  pyproject.toml  sdk_server.py  test_permissions.py  test_server_like.py
