[project]
name = "claude-rstudio-server"
version = "0.1.0"
description = "FastAPI server wrapping Claude Agent SDK for RStudio integration"
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "boto3>=1.35.0",
    "python-dotenv>=1.0.0",
    "sse-starlette>=2.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "httpx>=0.27.0"
]
